<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="preference_file_key">shared_pref</string>
    <string name="tab_top_cities">Top Cities</string>
    <string name="tab_book_mark">Bookmark</string>
    <string name="tab_map_locations">Map Locations</string>
    <string name="title_activity_city_weather_information">CityWeatherInformation</string>
    <string name="search_location">Search Location</string>
    <string name="help_description">This application shows the weather data which include location, time, description, wind, pressure, humidity and temperature. There are following features:</string>
    <string name="help_description2">1. <b>Top Cities:</b> This list has some predefined top indian cities.\n\n2. <b>Map Locations:</b> This list will display the location which we will select from map.\n\n3. <b>Bookmark:</b> This list will display bookmarked location selected from `Top cities` or `Map locations`.  </string>
    <string name="help_description3">On clicking on the any list item, the weather forecast detail screen will display.</string>
    <string name="help_bookmark_description">On clicking this icon in any list, location named on the row will be stored in bookmarked list.</string>
    <string name="help_cancel_description">On clicking this icon in any list, location from that list will be removed.</string>
    <string name="help_vert_description">This is the menu button to open setting or menu screen. Through setting screen you can clean the stored locations and bookmarks. There you can change the temperature unit system also.</string>
    <string name="celsius">\u2103</string>
    <string name="fahrenheit">\u2109</string>
</resources>