<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.HelpActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dp_8"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="@dimen/dp_4"
                android:text="@string/help_description"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_4"
                android:padding="@dimen/dp_4"
                android:text="@string/help_description2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_4"
                android:padding="@dimen/dp_4"
                android:text="@string/help_description3"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bookmark_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_4"
                android:drawableStart="@drawable/ic_baseline_star_border_24"
                android:drawablePadding="@dimen/dp_8"
                android:padding="@dimen/dp_4"
                android:text="@string/help_bookmark_description"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cancel_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_4"
                android:drawableStart="@drawable/ic_baseline_cancel_24"
                android:drawablePadding="@dimen/dp_8"
                android:padding="@dimen/dp_4"
                android:text="@string/help_cancel_description"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookmark_description" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vert_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_4"
                android:drawableStart="@drawable/ic_baseline_more_vert_24"
                android:drawablePadding="@dimen/dp_8"
                android:padding="@dimen/dp_4"
                android:text="@string/help_vert_description"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cancel_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>